# langchain_sprint_project

./: .env-template  .gitignore  MondayAPI.py  README.md  logger_setup.py  main.py  pyproject.toml  todo.csv
